<resources>
    <string name="scale_app_name">lswebviewmoudle</string>

    <string name="scale_s_bluetooth_disconnect">蓝牙未连接</string>
    <string name="scale_s_bluetooth_connected">蓝牙已连接</string>
    <string name="scale_s_connecting">连接中...</string>
    <string formatted="false" name="scale_mine_device">我的设备</string>

    <string name="scale_s_empty_device_list_state">暂无绑定设备</string>
    <string formatted="false" name="scale_device_pairing">正在绑定</string>
    <string formatted="false" name="scale_device_repair">重新绑定</string>
    <string formatted="false" name="scale_device_search_connect_title">已发现的设备</string>
    <string formatted="false" name="scale_bind_successful">绑定成功</string>
    <string formatted="false" name="scale_device_success">完成</string>
    <string formatted="false" name="scale_how_to_use_device">了解设备如何操作</string>
    <string formatted="false" name="scale_device_work">操作指南</string>
    <string name="scale_common_cancel">Cancel</string>
    <string name="scale_common_submit">Done</string>
    <string name="scale_dialog_handding">处理中...</string>
    <string formatted="false" name="scale_device_edit_code_hints">Please enter the 6-digit verification code of the device within 55 seconds.</string>

    <string formatted="false" name="scale_device_mid_bind_false">绑定失败</string>
    <string formatted="false" name="scale_device_more_select">*请将手机靠近设备，尝试重新绑定</string>
    <string formatted="false" name="scale_device_please_move_your_mobile">请让手机靠近设备</string>
    <string formatted="false" name="scale_device_open_bluetooth_to_lifesense">打开蓝牙来允许\&quot;乐心健康\&quot;连接配件</string>
    <string formatted="false" name="scale_device_heart_maintain_mode">开启</string>
    <string formatted="false" name="scale_permissions_location_title">请开启定位服务</string>
    <string formatted="false" name="scale_permissions_location_open">开启后乐心健康即可搜索和连接设备</string>
    <string formatted="false" name="scale_device_waiting_bind">等待绑定</string>
    <string formatted="false" name="scale_device_action_bind">立即绑定</string>
    <string formatted="false" name="scale_device_closest">(离你最近)</string>
    <string formatted="false" name="scale_device_select_title">选择需要绑定的设备</string>
    <string formatted="false" name="scale_device_searching">正在搜索</string>
    <string formatted="false" name="scale_device_bluetooth_no_open">蓝牙未开启</string>

    <string formatted="false" name="scale_permissions_setting">去设置</string>

    <!--   设备详情-->
    <string name="scale_device_details">Device details</string>
    <string name="scale_device">Device</string>
    <string name="scale_unbind">Unbind</string>
    <string name="scale_unit">Unit</string>
    <string name="scale_heart_rate">Heart Rate</string>
    <string name="scale_mac_address">Mac address</string>
    <string name="scale_firmware_update">Firmware Update</string>
    <string name="scale_dial_peace">表盘样式</string>
    <string name="scale_message_reminder">消息提醒</string>
    <string name="scale_night_mode">夜间模式</string>
    <string name="scale_no_disturb_mode">勿扰模式</string>
    <string name="scale_encourage_setting">目标设置</string>
    <string name="scale_realtime_heart_rate">实时心率监测</string>
    <!--  固件升级  -->
    <string name="scale_try_again">Try again</string>
    <string name="scale_cancel_upgrade">Cancel</string>
    <string name="scale_upgrade_info_new_version_msg">New version is ready to be upgraded：V%s</string>
    <string name="scale_upgrade_info_current_version_msg">Current version：V%s</string>
    <string name="scale_upgrading_msg">Upgrading…</string>
    <string name="scale_upgrade_interrupt_msg">Upgrade suspended,\nplease make sure device and mobile network are connected.</string>
    <string name="scale_upgrade_success_msg">Upgrade successful!</string>
    <string name="scale_upgrade_success_version_msg">New Version V%s</string>
    <string name="scale_device_firmware_upgrade_title">Firmware Upgrade</string>
    <string name="scale_upgrade_now">Upgrade now</string>
    <!--  体重单位  -->
    <string name="scale_unit_kg">KG</string>
    <string name="scale_unit_lb">Pounds</string>
    <string name="scale_unit_cm">CM</string>
    <string name="scale_unit_in">Inch</string>
    <string name="scale_height_unit">Height unit</string>
    <string name="scale_weight_unit">Weight unit</string>
    <!--  对话框  -->
    <string name="scale_resume">Cancel</string>
    <string name="scale_stop">Confirm</string>
    <string name="scale_tips">Tips</string>
    <string name="scale_stop_upgrade_msg">Stop firmware upgrading? It will delete the downloaded file.</string>
    <!--  法律信息  -->
    <!--  使用帮助  -->

    <!--  心率检测  -->
    <string name="scale_open_heart_rate_msg">Heart rate detection function is ON.</string>
    <string name="scale_close_heart_rate_msg">Heart rate detection function is OFF.</string>

    <string name="scale_setting_fail_msg">Please connect the device with mobile before setting.</string>


</resources>
