<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="imageUrl"
            type="String" />
        <variable
            name="listener"
            type="com.lifesense.android.health.service.devicebind.ui.fragment.DeviceFailFragment" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDeviceIcon"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="60dp"
            app:imageUrl="@{imageUrl}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/scale_device_mid_bind_false"
            android:textColor="@color/scale_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/scale_device_more_select"
            android:textColor="#FD5E45"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvBottom"
            style="@style/scale_PositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/scale_device_repair"
            android:onClick="@{view->listener.onClick(view)}"
            />


    </LinearLayout>

</layout>
