<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/scale_bg_dialog"
    >
   <TextView
       android:id="@+id/tv_title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/scale_tips"
       android:gravity="center"
       android:textSize="@dimen/scale_dialog_title_text_size"
       android:paddingHorizontal="30dp"
       android:paddingTop="21dp"
       android:paddingBottom="15dp"
       android:textColor="@color/scale_color_dialog_title_text"
       />
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="39dp"
        android:paddingHorizontal="26dp"
        android:textColor="@color/scale_color_dialog_msg_text"
        android:textSize="@dimen/scale_dialog_msg_text_size"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="18dp"
        >
        <TextView
            android:id="@+id/bt_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/scale_white"
            android:text="@string/scale_resume"
            android:textColor="@color/scale_color_dialog_button_text"
            android:textSize="@dimen/scale_dialog_button_text_size"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/bt_positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/scale_white"
            android:text="@string/scale_stop"
            android:textColor="@color/scale_color_dialog_button_text"
            android:textSize="@dimen/scale_dialog_button_text_size"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>