<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="imageUrl"
            type="String" />
        <variable
            name="listener"
            type="com.lifesense.android.health.service.devicebind.ui.fragment.DeviceSuccessFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDeviceIcon"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="60dp"
            app:imageUrl="@{imageUrl}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/scale_bind_successful"
            android:textColor="@color/scale_black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="邀亲友共享健康数据 &gt;"
            android:textColor="@color/scale_main_blue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvHowToUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#6593E5"
            android:textSize="14sp"
            android:text="@string/scale_how_to_use_device"
            android:onClick="@{view->listener.onClick(view)}"
            />

        <TextView
            android:id="@+id/tvBottom"
            style="@style/scale_PositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/scale_device_success"
            android:onClick="@{view->listener.onClick(view)}"
            />

    </LinearLayout>
</layout>
