<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="194dp"
        android:layout_height="194dp"
        android:layout_marginTop="94dp"
        >
        <com.lifesense.android.health.service.devicedetails.widget.CircleProgressBar
            android:id="@+id/upgrade_progress_bar"
            android:layout_width="194dp"
            android:layout_height="194dp"
            android:layout_gravity="center"
           />
        <TextView
            android:id="@+id/tv_upgrade_progress_text"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:background="@drawable/scale_bg_circle_progress_text"
            android:gravity="center"
            android:textSize="47sp"
            />
    </FrameLayout>



    <TextView
        android:id="@+id/tv_upgrade_state_msg"
        android:layout_marginTop="29dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:textSize="19sp"
        android:textColor="#414141"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/scale_line_space_extra"
        />
    <TextView
        android:id="@+id/tv_start_upgrade"
        style="@style/scale_PositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/scale_upgrade_now"
        android:layout_marginBottom="29dp"
        />
    <TextView
        android:id="@+id/tv_retry"
        style="@style/scale_PositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/scale_try_again"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tv_cancel_upgrade"
        style="@style/scale_NegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale_cancel_upgrade"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="29dp"
        />
</LinearLayout>